plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.doubleo'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
repositories {
    mavenCentral()

    // 추가: GitHub Packages 에서 grpc-interfaces 모듈(hospital-interface)만 가져오기
    maven {
        name = 'GitHubPackages'
        url  = uri('https://maven.pkg.github.com/TeamDoubleO/grpc-interfaces')
        credentials {
            username = System.getenv("GIT_USERNAME") ?: project.findProperty("gpr.user")
            password = System.getenv("GIT_TOKEN") ?: project.findProperty("gpr.key")
        }
    }
}


ext {
    set('springCloudVersion', "2024.0.1")
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // config
    implementation 'org.springframework.cloud:spring-cloud-starter-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
    // eureka
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    // openfeign
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'
    // MySQL
    implementation 'mysql:mysql-connector-java:8.0.33'
    // Actuator & Micrometer
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-core'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // (1) hospital-interface 모듈
    implementation "com.doubleo.grpc:hospital-interface:0.1.6"

    // (2) gRPC 런타임
    implementation "io.grpc:grpc-netty:1.63.0"
    implementation "io.grpc:grpc-protobuf:1.63.0"
    implementation "io.grpc:grpc-stub:1.63.0"

    // (3) Spring Boot starter for gRPC 서버/클라이언트 자동설정
    implementation 'com.google.protobuf:protobuf-java:4.28.2'
    implementation 'net.devh:grpc-spring-boot-starter:3.1.0.RELEASE'

    //Tenant-Context
    implementation 'com.doubleo:tenant-context:0.0.2'

}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}


tasks.named('test') {
    useJUnitPlatform()
}

spotless {
    java {
        // Google Java 포맷 적용
        /*
            googleJavaFormat() : 탭은 2개의 공백
            googleJavaFormat().aosp() : 탭은 4개의 공백
            [참고] https://github.com/google/google-java-format/issues/525
         */
        googleJavaFormat().aosp()
        // import 순서 정렬
        importOrder()
        // 사용하지 않는 import 제거
        removeUnusedImports()
        // 각 라인 끝에 있는 공백을 제거
        trimTrailingWhitespace()
        // 파일 끝에 새로운 라인 추가
        endWithNewline()
    }
}

tasks.register('updateGitHooks', Copy) {
    from('./scripts/') {
        include 'pre-commit'
        include 'prepare-commit-msg'
    }
    into './.git/hooks'
}


//tasks.register('makeGitHooksExecutable', Exec) {
//    commandLine 'chmod', '+x', './.git/hooks/pre-commit', './.git/hooks/prepare-commit-msg'
//    dependsOn updateGitHooks
//}
//
//compileJava.dependsOn makeGitHooksExecutable
//
